# rage

./: .gitignore  README.md  pyproject.toml
playground/: demo.ipynb  model.ipynb
rage/: case.py  models.py  results.py  template.py  utils.py
rage/metrics/: __init__.py  base.py  context_precision_recall_f1.py
rage/metrics/deterministic/: answer_correctness.py  answer_faithfulness.py  context_precision_recall_f1.py
rage/metrics/generate_based/: answer_correctness.py  answer_faithfulness.py  answer_relevance.py  context_coverage.py  context_precision.py
tests/: test_deterministic_metric.py  test_generate_based_metric.py
